using System.Collections;
using System.Collections.Generic;

namespace Constants
{
    public static class AnimationParameter
    {
        public const string Attack = "Attack";
        public const string Attacked = "Attacked";
        public const string Speed = "Speed";
        public const string IsDeath = "IsDeath";
        public const string IsJumping = "IsJumping";
        public const string IsBlocking = "IsBlocking";
        public const string IsFalling = "IsFalling";
        public const string IsGrounded = "IsGrounded";
    }
}

