using System.Collections;
using System.Collections.Generic;

namespace Core.Constants
{
    public static class AnimationParameter
    {
        public const string Attack = "Attack";
        public const string IsAttacked = "IsAttacked";
        public const string Speed = "Speed";
        public const string IsDeath = "IsDeath";
        public const string IsJumping = "IsJumping";
        public const string IsBlocking = "IsBlocking";
        public const string Block = "Block";
        public const string IsFalling = "IsFalling";
        public const string IsGrounded = "IsGrounded";
        public const string Parry = "Parry";
        public const string Start = "Start";
        public const string End = "End";
    }
}

